Add images of animals

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
               <span><ion-icon name="paw-outline"></ion-icon></span>Animals
             </h2>
             <ul>
-              <li class="li">Wolves</li>
-              <li class="li">Owls</li>
-              <li class="li">Dolphins</li>
+              <li class="li" onclick="mostrarContenido('wolves')">Wolves</li>
+              <li class="li" onclick="mostrarContenido('owls')">Owls</li>
+              <li class="li" onclick="mostrarContenido('dolphins')">Dolphins</li>
             </ul>
           </div>
           <div class="list">
@@ -50,6 +50,7 @@
           <h1 class="max" onclick="document.location.reload()">"The World"</h1>
         </div>
         <div id="image-list">
+          <!-- nature -->
           <div class="gallery show">
             <div class="top">
               <div class="card">
@@ -302,6 +303,215 @@
               <div class="card">
                 <div class="face front">
                   <video src="./img/mountains/M-video3.mp4" autoplay loop muted></video>
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- animals -->
+          <div id="wolves" class="gallery hide">
+            <div class="top">
+              <div class="card double">
+                <div class="face front">
+                  <img src="./img/wolves/Wimg1.jpg" alt="" />
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+              <div class="card double">
+                <div class="face front">
+                  <img src="./img/wolves/Wimg2.jpg" alt="" />
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+            </div>
+            <div class="bottom">
+              <div class="card">
+                <div class="face front">
+                  <video src="./img/wolves/Wvideo1.mp4" autoplay loop muted></video>
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="face front">
+                  <video src="./img/wolves/Wvideo2.mp4" autoplay loop muted></video>
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="face front">
+                  <video src="./img/wolves/Wvideo3.mp4" autoplay loop muted></video>
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="face front">
+                  <video src="./img/wolves/Wvideo4.mp4" autoplay loop muted></video>
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="face front">
+                  <video src="./img/wolves/Wvideo5.mp4" autoplay loop muted></video>
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="owls" class="gallery hide">
+            <div class="top">
+              <div class="card">
+                <div class="face front">
+                  <video src="./img/owls/Ovideo1.mp4" autoplay loop muted></video>
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="face front">
+                  <img src="./img/owls/Oimg1.jpg" alt="" />
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+              <div class="card double">
+                <div class="face front">
+                  <img src="./img/owls/Oimg4.jpg" alt="" />
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+              
+            </div>
+            <div class="bottom">
+              <div class="card">
+                <div class="face front">
+                  <img src="./img/owls/Oimg3.jpg" alt="" />
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="face front">
+                  <video src="./img/owls/Ovideo3.mp4" autoplay loop muted></video>
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="face front">
+                  <video src="./img/owls/Ovideo2.mp4" autoplay loop muted></video>
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+              <div class="card double">
+                <div class="face front">
+                  <img src="./img/owls/Oimg5.jpg" alt="" />
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="dolphins" class="gallery hide">
+            <div class="top">
+              <div class="card double">
+                <div class="face front">
+                  <img src="./img/dolphins/Dimg1.jpg" alt="" />
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="face front">
+                  <img src="./img/dolphins/Dimg2.jpg" alt="" />
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="face front">
+                  <video src="./img/dolphins/Dvideo1.mp4" autoplay loop muted></video>
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+            </div>
+            <div class="bottom">
+              <div class="card">
+                <div class="face front">
+                  <img src="./img/dolphins/Dimg3.jpg" alt="" />
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="face front">
+                  <video src="./img/dolphins/Dvideo2.mp4" autoplay loop muted></video>
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="face front">
+                  <video src="./img/dolphins/Dvideo3.mp4" autoplay loop muted></video>
+                </div>
+                <div class="face back">
+                  <h3>Title</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, necessitatibus asperiores!</p>
+                </div>
+              </div>
+              <div class="card double">
+                <div class="face front">
+                  <img src="./img/dolphins/Dimg4.jpg" alt="" />
                 </div>
                 <div class="face back">
                   <h3>Title</h3>
